# rss-reader

./: .gitignore  Cargo.toml
.github/workflows/: build_binaries.yml  check.yml  rust.yml
src/: app.rs  channel.rs  core.rs  db.rs  image.rs  main.rs  news.rs  ui.rs  utils.rs
