[package]
name = "rss-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }
eframe = { version = "0.22", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui_extras = { version = "0.22", features = ["image"]}
rss = "2.0"
reqwest = "0.11"
bytes = "1.4"
url = "2.4"
image = { version = "0.24", features = ["png", "ico"]}
serde_json = "1"
egui-phosphor = "0.2"

[profile.dev.package."*"]  
opt-level = 2